--- a/index.html
+++ b/index.html
@@ -8,10 +8,32 @@
     <link rel="shortcut icon" href="favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
     <link rel="manifest" href="favicon/site.webmanifest" />
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<b> Under Construction </b>
+<main>
+    <div class="left-side">
+        <header class="logo">
+            <img src="favicon/favicon-96x96.png" alt="Lauren Slivka logo" class="logo-placeholder" />
+        </header>
 
+        <section class="about">
+            <b>Lauren Slivka</b>
+            <p>Under construction!</p>
+        </section>
+
+        <footer class="footer-nav">
+            <a href="#">WORKS</a>
+            <a href="#">PHILOSOPHY</a>
+            <a href="#">CONTACT</a>
+        </footer>
+    </div>
+
+    <div class="right-side">
+        <div class="canvas-placeholder">
+            <p>This is a placeholder for your  grid.</p>
+        </div>
+    </div>
+</main>
 </body>
 </html>
